# test_orcid_oauth

./: LICENSE  README.md  pyproject.toml
app/: main.py  protected_app.py
app/static/: style.css
app/templates/: index.html  protected.html  user.html
